# clean_architecture_fa

./: .env_example  .gitignore  .pre-commit-config.yaml  alembic.ini  alias  flake8  pyproject.toml
migrations/: env.py
src/: config.py  main.py  routes.py
tests/: test_smoke.py
