[tool.poetry]
name = "clean-architecture-fa"
version = "0.1.0"
description = "FastApi приложение с чистой архитектурой."
authors = ["Kozin Artem <grot_artem@inbox.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
remove_redundant_aliases = true
skip_glob = ["**/migrations/*"]
src_paths = ["src"]

[tool.black]
line-length = 79
target-version = ['py312']
extend-exclude = """
/(
  | migrations
)/
"""
